# nnvm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  a.s  b.s  gdbinit  main.ll
.github/workflows/: release.yml  train.yml
educg/: sync_repo.sh
nnvm/: CMakeLists.txt  main.cpp
nnvm/ADT/: GenericInt.h  Graph.h  Hash.h  List.h  ListNode.h  PatternMatch.h  Ranges.h
nnvm/Analysis/: AAInfo.cpp  AAInfo.h  AliasAnalysis.cpp  AliasAnalysis.h  BasicAA.cpp  BasicAA.h  DomTreeAnalysis.cpp  DomTreeAnalysis.h  LoopAnalysis.cpp  LoopAnalysis.h  MemAccAnalysis.cpp  MemAccAnalysis.h  PostDomTreeAnalysis.cpp  PostDomTreeAnalysis.h  SCEV.cpp  SCEV.h
nnvm/Backend/: Backend.h
nnvm/Backend/LLVM/: LLVMBackend.cpp  LLVMBackend.h
nnvm/Backend/RISCV/: CodeLayoutOpt.cpp  CodeLayoutOpt.h  CodegenInfo.cpp  CodegenInfo.h  EmitInfo.cpp  EmitInfo.h  ISel.cpp  ISel.h  LinearScanRA.cpp  LinearScanRA.h  LowIR.cpp  LowIR.h  LowInstType.h  Lower.cpp  Lower.h  MachineIR.cpp  MachineIR.h  PhiResolution.cpp  PhiResolution.h  RISCVBackend.cpp  RISCVBackend.h  RegisterAllocate.h  RegisterAllocater.h  RegisterAllocator.h  ScheduleModel.cpp  ScheduleModel.h  Scheduler.cpp  Scheduler.h  Spiller.h  StackAllocator.cpp  StackAllocator.h  StackSlot.h  TrivialRA.cpp  TrivialRA.h
nnvm/Backend/RISCV/Analysis/: LiveIntervalAnalysis.cpp  LiveIntervalAnalysis.h  LivenessAnalysis.cpp  LivenessAnalysis.h  NearbyRegAnalysis.cpp  NearbyRegAnalysis.h
nnvm/Backend/RISCV/Info/: InstLatency.h  Register.h
nnvm/Backend/RISCV/LowIR/: Builder.cpp  Builder.h  CodeGenHelper.h  LIRValue.cpp  LIRValue.h  Patterns.h
nnvm/Backend/RISCV/Optimization/: Peephole.cpp  Peephole.h  SSAPeephole.cpp  SSAPeephole.h  TailDuplicator.cpp  TailDuplicator.h
nnvm/Backend/RISCV/RA/: GraphColoringRA.cpp  GraphColoringRA.h  LinearScanRA.cpp  LinearScanRA.h
nnvm/Backend/RISCV/Verifier/: DefUsePrinter.h
nnvm/Frontend/: Builtin.cpp  Builtin.h  ErrorReporter.cpp  ErrorReporter.h  IRGenerator.cpp  IRGenerator.h  Symbol.cpp  Symbol.h  SysYLexer.cpp  SysYLexer.g4  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.g4  SysYParser.h  SysYParser.interp  SysYParser.tokens  SysYParserBaseListener.cpp  SysYParserBaseListener.h  SysYParserBaseVisitor.cpp  SysYParserBaseVisitor.h  SysYParserListener.cpp  SysYParserListener.h  SysYParserVisitor.cpp  SysYParserVisitor.h  generate.sh
nnvm/IR/: Argument.h  Attributes.h  BasicBlock.cpp  BasicBlock.h  Constant.cpp  Constant.h  Function.cpp  Function.h  GlobalVariable.cpp  GlobalVariable.h  IRBuilder.cpp  IRBuilder.h  Instruction.cpp  Instruction.h  Module.cpp  Module.h  Type.cpp  Type.h  UBValue.cpp  UBValue.h  Value.cpp  Value.h
nnvm/IR/Verifier/: IRVerifier.cpp  IRVerifier.h
nnvm/Platform/: BishengPlatform.h  Platform.h
nnvm/Transform/: Opt.cpp  Opt.h
nnvm/Transform/BeforeCodegen/: GlobalHoist.cpp  GlobalHoist.h  WhichExpand.cpp  WhichExpand.h
nnvm/Transform/IPO/: GlobalAttributor.cpp  GlobalAttributor.h  GlobalVarOpt.cpp  GlobalVarOpt.h  Inliner.cpp  Inliner.h  UselessFuncElim.cpp  UselessFuncElim.h
nnvm/Transform/Infra/: BlockUtils.cpp  BlockUtils.h  Pass.h  PassManager.h
nnvm/Transform/Scalar/: CFGCombiner.cpp  CFGCombiner.h  CSE.cpp  CSE.h  CombinePatterns.h  Combiner.cpp  Combiner.h  ConstantFold.cpp  ConstantFold.h  GVN.cpp  GVN.h  LICM.cpp  LICM.h  LinearizePtrAdd.cpp  LinearizePtrAdd.h  Mem2Reg.cpp  Mem2Reg.h  MemProp.cpp  MemProp.h  Rotate.cpp  Rotate.h  SLPairElim.cpp  StackElim.cpp  StackElim.h  SuperDCE.h  TailElim.cpp  TailElim.h
nnvm/Transform/Scalar/Loop/: LICM.cpp  LICM.h  LSR.cpp  LSR.h  LoopCanon.cpp  LoopCanon.h  LoopLoadStorePair.cpp  LoopLoadStorePair.h  LoopUtils.cpp  LoopUtils.h  Rotate.cpp  Rotate.h  StaticUnroll.cpp  StaticUnroll.h
nnvm/Transform/Scalar/Memory/: DeadStoreElim.cpp  DeadStoreElim.h  Mem2Reg.cpp  Mem2Reg.h  MemProp.cpp  MemProp.h  SLPairElim.cpp  SLPairElim.h
nnvm/Utils/: Cast.h  Collection.h  Debug.h
nnvm_perf/: gen_exec.py  perf_exec.py
nnvm_perf/exec/: 00_bitset1.out  00_bitset2.out  00_bitset3.out  01_mm1.out  01_mm3.out  02_mv1.out  02_mv2.out  02_mv3.out  03_sort1.out  03_sort2.out  03_sort3.out  04_spmv2.out  04_spmv3.out  brainfuck-bootstrap.out  brainfuck-mandelbrot-nerf.out  brainfuck-pi-nerf.out  conv0.out  conv1.out  crypto-2.out  crypto-3.out  crypto1.out  crypto2.out  crypto3.out  dead-code-elimination-1.out  dead-code-elimination-2.out  dead-code-elimination-3.out  derich1.out  derich2.out  derich3.out  fft1.out  fft2.out  floyd-0.out  floyd-1.out  floyd-2.out  gameoflife-gosper.out  gameoflife-p61glidergun.out  h-1-02.out  h-1-03.out  h-2-01.out  h-2-02.out  (+55 more)
runner/: compile_and_run.sh
test/: CMakeLists.txt
test/Analysis/: CMakeLists.txt  testDomTree.cpp  testLoopAnalysis.cpp
test/Driver/: int_main.c
test/Frontend/: a.sysy  b.sysy  call-bug.sysy  call.sysy  constant-debug.sysy  constant.sysy  error.sysy  float-lexical.sysy  if.sysy  short-easy.sy  (+2 more)
test/IR/: CMakeLists.txt  testBuilder.cpp
(+842 files in other folders)
